* Merged theme_bordersontop with theme_gridsontop
* Changed the default breaks to now include the minimum value, permitting the next item:
* Modification of the theme_novar_tern to also discard the tern.axis.line.X (X=T,L,R) theme element.

ggtern 2.1.2
----------------------------------------------------------------
* Fixed bug in themes, some of the theme elements were being ignored
* Added convenience function, and theme element, to turn on or off the clipping mask automatic addition
* interpolate_tern, automatic bins / breaks now determined prior to transformation to inverse log ratio space. Also, bins / breaks argument defined (was previously not included in signature), and also introduced the ability
to conduct interpolation on both ilr and cartesian coordinate system, similar to stat_density_tern etc...

ggtern 2.1.1
----------------------------------------------------------------
* Fixed bug introduced in previous update, where the manual mask addition was being ignored.
* Fixed is.logical(na.rm) bug to do with bad ellipsis placement in stats and geoms
* Added new point geometry, which swaps the colour and fill aesthetics
* Added new annotation ternary raster, for overlaying images. Included sample raster data (FeldsparRaster)

ggtern 2.1.0
----------------------------------------------------------------
* Fixed compatibility issues with ggplot2 v 2.1.0, several modification to this version of ggplot2, broke existing ggtern code
* Introdcution of geom_isopropX (X = T,L,R)

ggtern 2.0.2
----------------------------------------------------------------
* Fixed the stat_interpolation_tern to handle the different modelling methods
* Better haldling of the 'fullrange' case within the stat_interpolation_tern method
* Added GeomDl for direct.label
* Applied label formatter to all labels (title, legend etc...), not just ternary specific labels
* Fixed bug in theme_custom(...)